fix scrollbar bug and restyle scrollbar to fit design motif of site

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,27 +6,32 @@ a {
 }
 body {
   background-color: $primary-background;
+  overflow: overlay;
+  overflow-x: hidden;
 }
 * {
-  font-family: "Montserrat", "Darker Grotesque", "Open Sans Condensed",
+  font-family: 'Montserrat', 'Darker Grotesque', 'Open Sans Condensed',
     sans-serif;
   box-sizing: border-box;
   padding: 0px;
   margin: 0px;
 
   &::-webkit-scrollbar {
-    width: 10px;
-    background-color: rgb(92, 91, 83);
+    border-radius: 8px;
+    width: 6px;
   }
 
-  &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: rgb(87, 86, 78);
+  &::-webkit-scrollbar-track-piece {
+    border-radius: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    background-color: rgb(216, 216, 215, 0.5);
+    height: 15%;
+    border-radius: 8px;
+  }
 
-    background-color: rgb(32, 32, 32);
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(199, 195, 181);
   }
 }
