--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 body {
   margin: 0;
-  font-family: 'Montserrat', 'Darker Grotesque', 'Open Sans Condensed', sans-serif;
+  font-family: 'Montserrat', 'Darker Grotesque', 'Open Sans Condensed',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: 'Montserrat', 'Darker Grotesque', 'Open Sans Condensed', sans-serif;
+  font-family: 'Montserrat', 'Darker Grotesque', 'Open Sans Condensed',
+    sans-serif;
 }
 
 a {
