--- a/src/pages/RightColumn/NewsFeed/NewsFeed.scss
+++ b/src/pages/RightColumn/NewsFeed/NewsFeed.scss
@@ -58,20 +58,6 @@
   }
 }
 
-.news-feeds-table::-webkit-scrollbar {
-  width: 8px;
-}
-
-.news-feeds-table::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px $twelve;
-  background-color: $thirteen;
-}
-
-.news-feeds-table::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px $fourteen;
-  background-color: $five;
-}
-
 @media (max-width: 1380px) {
   .news-feeds-table {
     .news-feed-title {
